src/Mobile.css
#mobile-header,
#mobile-catch,
.mobile {
  display: none;
}

.main-info-container {
  display: flex;
}
@media only screen and (max-width: 900px) {
  :root {
    --card-color: rgb(10, 9, 32);
  }
  #wipAlert,
  footer {
    display: none;
  }
  .mobile {
    display: block;
  }

  main {
    display: flex;
    flex-direction: column;
    padding: 8px;
  }

  #logo {
    height: 100%;
    aspect-ratio: 1;
  }

  #mobile-catch {
    display: flex;
    display: none;
    gap: 48px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
  }

  #catchphrase-cont {
    height: fit-content;
    padding: 70px 0;
  }

  #header-home {
    font-size: 1rem;
  }

  #convention-list-filter {
    margin-left: auto;
    margin-right: auto;
    width: 90vw;
    min-height: 100svh;
    height: fit-content;
  }

  #standard-tags,
  #location-tags {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
  }

  .tag-container .input {
    width: 100%;
  }

  #convention-list-cont {
    border-radius: 32px;
  }

  .convention-card {
    background-color: var(--card-color);
    width: 100%;
    flex-direction: column;
    height: fit-content;
    gap: 12px;
  }

  .convention-card:hover {
    background-color: transparent;
  }

  .convention-card section {
    position: relative;
    z-index: 5;
  }

  .notice {
    z-index: 10;
  }

  .convention-card section:last-child {
    width: 100%;
  }
  .convention-desc {
    padding: 0;
    padding-top: 12px;
    border-left: none;
    border-top: 1px solid rgb(226, 163, 255);
  }
  .convention-logo {
    z-index: 0;
    position: absolute;
    left: 24px;
    top: 10%;
    height: 200px;
  }

  .logo-cover {
    z-index: 1;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    opacity: 1;
    background: var(--card-color);
    background: linear-gradient(
      90deg,
      rgba(0, 0, 0, 0.555) 10%,
      var(--card-color) 100%
    );
  }

  .convention-logo img {
    width: fit-content;
    height: 200px;
  }

  #landing-nav {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 12px;
  }

  .alert {
    background-color: red;
    padding: 12px;
    width: 100%;
  }

  .main-info-container {
    width: 100%;
    padding: 24px 0 0 24px;
  }

  .convention-info {
    width: 100%;
    padding: 0;
  }

  #convention-info-main {
    flex-direction: column;
  }

  #convention-general {
    padding: 24px;
  }

  #convention-info-heading {
    padding: 0 24px;
  }

  form {
    width: 100%;
    min-height: 600px;
    height: fit-content;
  }

  form h2 {
    padding: 14px 0;
  }

  .MuiButtonBase-root {
    text-overflow: clip;
  }

  #pagination-buttons button {
    width: 50%;
  }

  #reset-password {
    height: 70svh;
  }

  #reset-password .input-container {
    flex-direction: row;
  }

  a h4 {
    text-decoration: underline;
  }

  #account-page #user-details {
    width: 100%;
    padding: var(--settings-padding) 0;
  }
  #account-page .danger-zone {
    justify-content: center;
  }
}

